yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-api-service
  namespace: default
  labels:
    app: fast-api-service
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 3000
      port: 80
      protocol: TCP
  selector:
    app: fast-api
